duration picker not showing like it should up, if behinde are radiobuttons[UI Configuration: Prevent Users to insert invalid data #751]

--- a/dcm4chee-arc-ui2/src/assets/scss/old_style.scss
+++ b/dcm4chee-arc-ui2/src/assets/scss/old_style.scss
@@ -178,7 +178,7 @@ ul.nav#mainmenu {
     z-index: 998;
 }
 .form_content{
-	z-index: 98;
+	z-index: 95;
 	.btn {
 	    //background: rgba(54, 54, 54, 0.55) none repeat scroll 0 0;
 	    //border: 1px solid #ccc;
